# hyperglot

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
lib/hyperglot/: __init__.py  checkbase.py  checker.py  orthography.py
lib/hyperglot/checks/: check_arabic_joining.py  check_brahmi_conjuncts.py  check_brahmi_halfforms.py  check_combination_marks.py  check_coverage.py  check_mark_attachment.py
lib/hyperglot/data/: gmy.yaml  jpn.yaml
rust/: Cargo.toml
rust/src/: checker.rs  cli.rs  enums.rs  error.rs  language.rs  languages.rs  lib.rs  loader.rs  main.rs  orthography.rs  parse.rs  shaper.rs
rust/src/checks/: arabic_joining.rs  brahmi_conjuncts.rs  brahmi_halfforms.rs  combination_marks.rs  coverage.rs  mark_attachment.rs  mod.rs
tests/: test_checker.py  test_checks.py
