[package]
name = "hyperglot"
version = "0.8.1"
edition = "2021"

[[bin]]
name = "hyperglot"
path = "src/main.rs"

[lib]
name = "hyperglot"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
unicode-normalization = "0.1"
unicode-general-category = "1"
regex = "1"
once_cell = "1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
rustybuzz = "0.18"
ttf-parser = "0.24"
